--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcf7ab">  <td>22/02/18 03:00:03</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;EditTodaosTest.Cleartest()[pri:0, instance:TestPackage.EditTodaosTest@49b07ee3]">&lt;&lt;Cleartest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1962865655</td>   <td></td> </tr>
-<tr bgcolor="fcf7ab">  <td>22/02/18 03:00:02</td>   <td>-1038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditTodaosTest.EditToDosTest()[pri:0, instance:TestPackage.EditTodaosTest@49b07ee3]">EditToDosTest</td> 
-  <td>main@1962865655</td>   <td></td> </tr>
+<tr bgcolor="7eb365">  <td>22/02/20 02:07:31</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;ValidationClass.Cleartest()[pri:0, instance:TestPackage.ValidationClass@25084a1e]">&lt;&lt;Cleartest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@20853837</td>   <td></td> </tr>
+<tr bgcolor="7eb365">  <td>22/02/20 02:07:25</td>   <td>-6583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidationClass.DeleteTodos1()[pri:0, instance:TestPackage.ValidationClass@25084a1e]">DeleteTodos1</td> 
+  <td>main@20853837</td>   <td></td> </tr>
+<tr bgcolor="7eb365">  <td>22/02/20 02:07:30</td>   <td>-1483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidationClass.MakeActiveToDo2Completed()[pri:0, instance:TestPackage.ValidationClass@25084a1e]">MakeActiveToDo2Completed</td> 
+  <td>main@20853837</td>   <td></td> </tr>
+<tr bgcolor="7eb365">  <td>22/02/20 02:07:30</td>   <td>-1483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ValidationClass.setup()[pri:0, instance:TestPackage.ValidationClass@25084a1e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@20853837</td>   <td></td> </tr>
+<tr bgcolor="7eb365">  <td>22/02/20 02:07:30</td>   <td>-1483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ValidationClass.setup()[pri:0, instance:TestPackage.ValidationClass@25084a1e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@20853837</td>   <td></td> </tr>
 </table>
