--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,4 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Delete existing ToDo</td></tr>
-<tr><td>Delete got failed</td></tr>
-<tr><td>[Ljava.lang.StackTraceElement;@189b5fb1</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
